<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.orangecoastcollege.cs273.petprotector.PetListActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Enter Pet To Protect"
        android:textSize="24sp"/>

    <ImageView
        android:id="@+id/petImageView"
        android:layout_width="315dp"
        android:layout_height="138dp"
        android:layout_gravity="center"
        android:contentDescription="photo of pet"
        android:clickable="true"
        android:onClick="selectPetImage"
        app:srcCompat="@drawable/none"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/detailsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/details"/>

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone_number"/>

    <Button
        android:id="@+id/addPetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="addPet"
        android:text="@string/add_button_text"/>

    <Button
        android:id="@+id/clearAllPetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="clearAllPets"
        android:text="@string/clear_button_text"/>

    <ListView
        android:id="@+id/petListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
